--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -70,3 +70,26 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f0f0f0;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
