--- a/queue-frontend/src/index.css
+++ b/queue-frontend/src/index.css
@@ -40,21 +40,25 @@ button:hover {
 }
 
 
-
 .form-container {
   background-color: white;
-  padding: 3rem;
+  padding: 2rem;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 550px;
+  width: 500px;
   text-align: center;
   margin: 0 auto;
+}
+
+.form-single {
+  display: block;
+  margin-bottom: 1rem;
 }
 
 .form-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem;
+  gap: 1.2rem;
 }
 
 .form-group {
