--- a/queue-frontend/src/components/Home.css
+++ b/queue-frontend/src/components/Home.css
@@ -189,10 +189,19 @@
     max-width: 400px;
     text-align: center;
   }
+
+  .model-input{
+    border: #333 1px solid;
+  }
   
   .close {
     float: right;
     font-size: 1.5rem;
     cursor: pointer;
+  }
+
+  .service{
+    width: 100%;
+    height: 30px;
   }
   
